# Handwritten-Digit-Classifier

./: .gitignore  README.md  app.py  export_onnx.py  functions.py  model-cnn.pt  predict.py  pyproject.toml  requirements.txt  train_cnn.py  train_fcnn.py  wrangler.jsonc
static/: app.js  index.html  style.css  wrangler.jsonc
static/models/: model-cnn.onnx  model-cnn.onnx.b64.js  model-fcnn.onnx  model-fcnn.onnx.b64.js  model-fcnn.pt
