[project]
name = "handwritten-digit-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "matplotlib>=3.10.8",
    "onnx>=1.21.0",
    "onnxscript>=0.6.2",
    "uvicorn>=0.30.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
